--- a/src/main/webapp/pages/MyProjects/MyProjects.html
+++ b/src/main/webapp/pages/MyProjects/MyProjects.html
@@ -42,8 +42,8 @@
                 <wm-gridrow name="gridrow15" padding="unset unset 1em unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn15">
                         <wm-composite name="composite2" required="true">
-                            <wm-label class="col-md-3 form-control-static" name="label6" caption="Select Municipality" fontweight="bold"></wm-label>
-                            <wm-container class="col-md-9" name="container2">
+                            <wm-label class="col-md-3 form-control-static" name="label6" caption="Select Municipality" fontweight="bold" width="160px"></wm-label>
+                            <wm-container class="col-md-9" name="container2" width="300px">
                                 <wm-select name="selectMunicipalityForCreateProje" dataset="bind:Variables.StandardUserMunicipalites.dataSet" datafield="All Fields" displayfield="MunicipalityName" placeholder="Select Municipality" orderby="MunicipalityName:asc"></wm-select>
                             </wm-container>
                         </wm-composite>
@@ -52,8 +52,8 @@
                 <wm-gridrow name="gridrow16" padding="1em unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn17">
                         <wm-composite name="composite3" required="true">
-                            <wm-label class="col-md-3 form-control-static" name="label7" caption="Project Name" fontweight="bold" required="false"></wm-label>
-                            <wm-container class="col-md-9" name="container3">
+                            <wm-label class="col-md-3 form-control-static" name="label7" caption="Project Name" fontweight="bold" required="false" width="160px"></wm-label>
+                            <wm-container class="col-md-9" name="container3" width="300px">
                                 <wm-text name="textProjectName" placeholder="Enter Text" required="false"></wm-text>
                             </wm-container>
                         </wm-composite>
