--- a/src/main/webapp/pages/ViewProject/ViewProject.html
+++ b/src/main/webapp/pages/ViewProject/ViewProject.html
@@ -97,32 +97,25 @@
                             <wm-tabs name="tabsProjectDetails">
                                 <wm-tabpane name="tabpaneMEMBERS" title="MEMBERS">
                                     <wm-livegrid formlayout="dialog" name="livegridProjectMembers"></wm-livegrid>
-                                    <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.ProjectSharedWithData.dataSet" navigation="Classic" name="gridProjectMembers" filtermode="multicolumn" exportformat="EXCEL">
-                                        <wm-grid-column-group name="group1" caption="Member">
-                                            <wm-grid-column binding="usersByProjectSharedWithUser.firstName" caption="First Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
-                                            <wm-grid-column binding="usersByProjectSharedWithUser.lastName" caption="Last Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
-                                        </wm-grid-column-group>
+                                    <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.ProjectSharedWithData.dataSet" navigation="Classic" name="gridProjectMembers" filtermode="multicolumn" exportformat="EXCEL"
+                                    showrecordcount="true">
+                                        <wm-grid-column-group name="group1" caption="Member"></wm-grid-column-group>
+                                        <wm-grid-column binding="usersByProjectSharedWithUser.fullName" caption="Project Member" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
                                         <wm-grid-column binding="projectSharedOn" caption="Date Added" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" filterwidget="text" readonly="false"></wm-grid-column>
-                                        <wm-grid-column-group name="group" caption="Added By">
-                                            <wm-grid-column binding="usersByProjectSharedBy.firstName" caption="First Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
-                                            <wm-grid-column binding="usersByProjectSharedBy.lastName" caption="Last Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
-                                        </wm-grid-column-group>
+                                        <wm-grid-column-group name="group" caption="Added By"></wm-grid-column-group>
+                                        <wm-grid-column binding="usersByProjectSharedBy.fullName" caption="Added By" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
                                         <wm-grid-action key="addNewRow" display-name="Add Member" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Member" action="Widgets.dialogAddMember.open()" shortcutkey="" disabled="bind:addMember"></wm-grid-action>
                                     </wm-grid>
                                 </wm-tabpane>
                                 <wm-tabpane name="tabpaneTASKS" title="TASKS">
                                     <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.ProjectTasksData.dataSet" navigation="Classic" name="gridTasks" confirmdelete="You are about to delete a milestone.  All related tasks will also be deleted.  Are you sure you would like to continue?"
-                                    nodatamessage="No Tasks found.">
+                                    nodatamessage="No Tasks found." filtermode="multicolumn" showrecordcount="true" exportformat="EXCEL">
+                                        <wm-grid-column binding="name" caption="Title" type="string" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                         <wm-grid-column binding="type" caption="Type" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
-                                        <wm-grid-column binding="name" caption="Name" type="string" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
-                                        <wm-grid-column-group name="group" caption="Assigned To">
-                                            <wm-grid-column binding="usersByAssignedTo.firstName" caption="First Name" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
-                                            <wm-grid-column binding="usersByAssignedTo.lastName" caption="Last Name" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
-                                        </wm-grid-column-group>
-                                        <wm-grid-column-group name="group1" caption="Created By">
-                                            <wm-grid-column binding="usersByCreatedBy.firstName" caption="First Name" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
-                                            <wm-grid-column binding="usersByCreatedBy.lastName" caption="Last Name" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
-                                        </wm-grid-column-group>
+                                        <wm-grid-column binding="startAt" caption="Start Date" type="timestamp" primary-key="false" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" filterwidget="date" readonly="false"></wm-grid-column>
+                                        <wm-grid-column binding="endAt" caption="End Date" type="timestamp" primary-key="false" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" filterwidget="date" readonly="false"></wm-grid-column>
+                                        <wm-grid-column binding="usersByAssignedTo.fullName" caption="Assigned To" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
+                                        <wm-grid-column binding="percentComplete" caption="Percent Complete" type="integer" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
                                         <wm-grid-action key="addNewRow" display-name="Add Task" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Task" action="Widgets.dialogAddtask.open()" shortcutkey="" disabled="false"></wm-grid-action>
                                         <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="Widgets.dialogUpdateTask.open()" disabled="false"></wm-grid-row-action>
