- Added EULA to GlobalSettings - Added EULA as required for signing up as a new user Files modified - [UserCreation.js,CXGlobalSettings.variables.json,cx2_published_dataModel.json,UserCreation.html,project-security.xml,servicedef.xml,UserCreation.variables.json,intercept-urls.json,CXGlobalSettings.html,GlobalSettings.java,UserViewPreferencesController.java,pages-config.json]

--- a/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.html
+++ b/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.html
@@ -66,6 +66,11 @@
                                         <wm-form-field name="cxemail" displayname="CX Email" show="true" primary-key="false" generator="assigned" key="cxemail" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
+                                <wm-gridrow name="gridrow14_1">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn14_1">
+                                        <wm-form-field displayname="CX EULA" widget="richtext" show="true" type="custom" name="cxeula"></wm-form-field>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
                             </wm-layoutgrid>
                             <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
                             <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
