User Prefernces bug Files modified - [pages-config.json,UserOpenForms.variables.json,UserOpenForms.html]

--- a/src/main/webapp/pages/UserOpenForms/UserOpenForms.html
+++ b/src/main/webapp/pages/UserOpenForms/UserOpenForms.html
@@ -19,7 +19,7 @@
                                         <wm-composite name="composite1" margin="unset unset unset 0.2em">
                                             <wm-label class="col-md-3 form-control-static" name="label1" caption="Select View" fontweight="bold" width="100px"></wm-label>
                                             <wm-container class="col-md-9" name="container1" width="180px">
-                                                <wm-select name="selectView" dataset="bind:Variables.SelectView.dataSet" datafield="All Fields" displayfield="viewName" datavalue="bind:Variables.SelectView.firstRecord"></wm-select>
+                                                <wm-select name="selectView" dataset="bind:Variables.SelectView.dataSet" datafield="All Fields" displayfield="viewName" datavalue="bind:Variables.PreferenceForUser.firstRecord"></wm-select>
                                             </wm-container>
                                         </wm-composite>
                                     </wm-gridcolumn>
